# Verdant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
api/: __init__.py  auth.py  config.py  main.py
api/models/: __init__.py
api/routers/: audit.py  keys.py  pipeline.py  providers.py  reports.py  webhooks.py
api/services/: cache_service.py  claude_service.py  db_service.py  gemini_service.py
api/services/prompts/: explain.txt  generate.txt
dashboard/: .env.example  .env.local  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/audits/: page.tsx
dashboard/app/auth/callback/: route.ts
dashboard/app/docs/: page.tsx
dashboard/app/login/: actions.ts  page.tsx
dashboard/app/overview/: page.tsx
dashboard/app/reports/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/components/: api-keys-form.tsx  audience-switcher.tsx  dashboard-shell.tsx  icons.tsx  lead-capture-form.tsx  provider-keys-form.tsx
dashboard/lib/: api.ts
dashboard/lib/supabase/: middleware.ts
docs/: api-reference.md  quickstart.md
examples/: demo.py
sdk/: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
sdk/verdant/: __init__.py  client.py  config.py  models.py  pipeline.py
sdk/verdant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/verdant/services/: cache_service.py  claude_service.py  db_service.py  gemini_service.py
sdk/verdant/services/prompts/: intent.txt
sdk/verdant/stages/: __init__.py  baseline.py  bias.py  explain.py  intent.py  trust.py
supabase/: seed.sql
supabase/migrations/: 001_init.sql  002_provider_keys.sql  003_api_keys_owner.sql
tests/api/: conftest.py  test_audits_router.py  test_keys.py  test_pipeline_router.py  test_reports_router.py
tests/sdk/: test_client.py  test_models.py  test_pipeline_stages.py
