[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdant"
version = "0.1.0"
description = "VERDANT SDK for inspectable AI governance"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["verdant*"]
