[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdant"
version = "0.1.0"
description = "VERDANT SDK for inspectable AI governance"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.34,<1",
  "fastapi>=0.115,<1",
  "google-generativeai>=0.7,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "redis>=5,<6",
  "supabase>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["verdant*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
]
