[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdant"
version = "0.1.1"
description = "VERDANT SDK for inspectable AI governance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Raheem" },
  { name = "Emafido" },
  { name = "Ismail" },
]
keywords = [
  "ai-governance",
  "ai-safety",
  "audit",
  "bias-detection",
  "ndpr",
  "trust-score",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "anthropic>=0.34,<1",
  "google-generativeai>=0.7,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "redis>=5,<6",
  "supabase>=2,<3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["verdant*"]

[tool.setuptools.package-data]
"verdant.services" = ["prompts/*.txt"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
]

[project.urls]
Homepage = "https://github.com/lgndcraft2/Verdant"
Repository = "https://github.com/lgndcraft2/Verdant"
Documentation = "https://github.com/lgndcraft2/Verdant/tree/main/docs"
Issues = "https://github.com/lgndcraft2/Verdant/issues"
